# Fitting-Pinsky-Rinzel-Model-via-Multiple-Shooting

./: CompileModel_MorrisLecar.py  CompileModel_PinskyRinzel2.py  INSTALL  LICENSE  MorrisLecar.cc  config.status  configure  configure.ac  createSpline  createSpline.cc  createSpline.cc_orig  createSpline.m  createSpline_mex.cc  createSpline_mex.mexa64  dconstr.f  dconstr.f_orig  dconstr.f_trial1  dconstr.f~  def.h  def.h~  diffit  diffit.cc  diffit.cc~  diffit.m  diffit_mex.cc  diffit_mex.mexa64  einfach.cc  fitIt.cc  fitIt.cc~  globOpt.cc  lsei_wrapper.f90  lsei_wrapper.f90~  lsei_wrapper_v1.f90  lsei_wrapper_v2.f90  makefile  makefile~  model.h  model2diffit  model2diffit.dbg  model2diffit.in  (+11 more)
SimulatedData/: get_intervals.m  intervals.txt  intervals_abridged.txt  intervalsmore.txt  pr_test1_rl_padded.txt  prmod_Is0.1_abridged.txt  prsolve_rk4.m  prsolve_rk4_sigmoid.m  run_pr.m
generic_modules/: #setInitialValues.cc#  call_odessa.cc  computeRight.cc  computeRight.cc~  dampIt.cc  dampIt.cc.~1~  dampIt.cc.~3~  freeMem.cc  initialise.cc  initialise.cc~  intODE.cc  intODE.cc~  integrateCVODES.cc  integrateRK.cc  outFit.cc  outSimit.cc  parse.cc  parse.cc.~1~  parse.cc.~2~  parse.cc.~7~  parse.cc.~8~  parseSimit.cc  readData.cc  readData.cc~  setInitialValues.cc  setInitialValues.cc~  setMesh.cc  setMesh.cc~  simInit.cc  simInit.cc~  solvLin.cc  solvLin.cc_orig  solvLin.cc_v2  solvLin.cc~
libCVODES/: band.h  libsundials_cvode.la  libsundials_cvodes.la  libsundials_fcvode.la  libsundials_fkinsol.la  libsundials_fnvecparallel.la  libsundials_fnvecserial.la  (+7 more)
nr/: choldc.cc  (+11 more)
(+99 files in other folders)
